DDW-418 - Align vertically the "News feed empty" message - container fixes

--- a/source/renderer/app/components/news/NewsFeed.scss
+++ b/source/renderer/app/components/news/NewsFeed.scss
@@ -96,9 +96,6 @@
     padding: 20px;
 
     &.emptyFeedContainer {
-      align-items: center;
-      display: flex;
-      justify-content: center;
       height: 100%;
     }
 
